--- a/Midterm Elections 2018.ipynb
+++ b/Midterm Elections 2018.ipynb
@@ -224,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### House Candidates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -629,6 +636,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Senate Candidates "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fec_candidate_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>party</th>\n",
+       "      <th>status</th>\n",
+       "      <th>address_one</th>\n",
+       "      <th>address_two</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>fec_committee_id</th>\n",
+       "      <th>cycle</th>\n",
+       "      <th>cand_status</th>\n",
+       "      <th>office_state</th>\n",
+       "      <th>district</th>\n",
+       "      <th>clean_name</th>\n",
+       "      <th>url</th>\n",
+       "      <th>crp_id</th>\n",
+       "      <th>google_entity_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>S8AZ00221</td>\n",
+       "      <td>MCSALLY, MARTHA</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>O</td>\n",
+       "      <td>2141 E CAMELBACK ROAD STE 250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PHOENIX</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>85016.0</td>\n",
+       "      <td>C00666040</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>C</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Martha McSally</td>\n",
+       "      <td>https://mcsallyforsenate.com/</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>S8AZ00197</td>\n",
+       "      <td>SINEMA, KYRSTEN</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>O</td>\n",
+       "      <td>PO BOX 7586</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PHOENIX</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>85011.0</td>\n",
+       "      <td>C00508804</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>C</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kyrsten Sinema</td>\n",
+       "      <td>https://kyrstensinema.com/</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/m/03qnndb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>S8CA00515</td>\n",
+       "      <td>BRADLEY, JAMES PATRICK MR</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>C</td>\n",
+       "      <td>30902 CLUB HOUSE DRIVE</td>\n",
+       "      <td>SUITE 16E</td>\n",
+       "      <td>LAGUNA NIGUEL</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>92677.0</td>\n",
+       "      <td>C00674085</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>N</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>James Bradley</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>S8CA00408</td>\n",
+       "      <td>DE LEON, KEVIN</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>C</td>\n",
+       "      <td>3605 LONG BEACH BLVD SUITE 426</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LONG BEACH</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>90807.0</td>\n",
+       "      <td>C00658773</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kevin de León</td>\n",
+       "      <td>https://www.kevindeleon.com/</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/m/0288snk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>S0CA00199</td>\n",
+       "      <td>FEINSTEIN, DIANNE</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>I</td>\n",
+       "      <td>PO BOX 1270</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOS ANGELES</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>90078.0</td>\n",
+       "      <td>C00539890</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Dianne Feinstein</td>\n",
+       "      <td>https://feinsteinforca.com/</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/m/01gqws</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fec_candidate_id                       name party status  \\\n",
+       "35        S8AZ00221            MCSALLY, MARTHA   REP      O   \n",
+       "36        S8AZ00197            SINEMA, KYRSTEN   DEM      O   \n",
+       "58        S8CA00515  BRADLEY, JAMES PATRICK MR   REP      C   \n",
+       "59        S8CA00408             DE LEON, KEVIN   DEM      C   \n",
+       "60        S0CA00199          FEINSTEIN, DIANNE   DEM      I   \n",
+       "\n",
+       "                       address_one address_two           city state      zip  \\\n",
+       "35   2141 E CAMELBACK ROAD STE 250         NaN        PHOENIX    AZ  85016.0   \n",
+       "36                     PO BOX 7586         NaN        PHOENIX    AZ  85011.0   \n",
+       "58          30902 CLUB HOUSE DRIVE   SUITE 16E  LAGUNA NIGUEL    CA  92677.0   \n",
+       "59  3605 LONG BEACH BLVD SUITE 426         NaN     LONG BEACH    CA  90807.0   \n",
+       "60                     PO BOX 1270         NaN    LOS ANGELES    CA  90078.0   \n",
+       "\n",
+       "   fec_committee_id  cycle cand_status office_state  district  \\\n",
+       "35        C00666040   2018           C           AZ         0   \n",
+       "36        C00508804   2018           C           AZ         0   \n",
+       "58        C00674085   2018           N           CA         0   \n",
+       "59        C00658773   2018           C           CA         0   \n",
+       "60        C00539890   2018           C           CA         0   \n",
+       "\n",
+       "          clean_name                            url crp_id google_entity_id  \n",
+       "35    Martha McSally  https://mcsallyforsenate.com/    NaN              NaN  \n",
+       "36    Kyrsten Sinema     https://kyrstensinema.com/    NaN       /m/03qnndb  \n",
+       "58     James Bradley                            NaN    NaN              NaN  \n",
+       "59     Kevin de León   https://www.kevindeleon.com/    NaN       /m/0288snk  \n",
+       "60  Dianne Feinstein    https://feinsteinforca.com/    NaN        /m/01gqws  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Senate_candidates = candidates_df[candidates_df[\"branch\"]=='S'].copy()\n",
+    "\n",
+    "Senate_candidates = Senate_candidates.drop(['branch'], axis=1)\n",
+    "\n",
+    "Senate_candidates.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -661,9 +888,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "Index(['fec_candidate_id'], dtype='object')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-953722384e0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Clean the data by dropping duplicates and setting the index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mHouse_candidates_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_duplicates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"fec_candidate_id\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdrop_duplicates\u001b[0;34m(self, subset, keep, inplace)\u001b[0m\n\u001b[1;32m   4326\u001b[0m         \"\"\"\n\u001b[1;32m   4327\u001b[0m         \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_bool_kwarg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inplace'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4328\u001b[0;31m         \u001b[0mduplicated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mduplicated\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4329\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4330\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mduplicated\u001b[0;34m(self, subset, keep)\u001b[0m\n\u001b[1;32m   4376\u001b[0m         \u001b[0mdiff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4377\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdiff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4378\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4379\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4380\u001b[0m         vals = (col.values for name, col in self.iteritems()\n",
+      "\u001b[0;31mKeyError\u001b[0m: Index(['fec_candidate_id'], dtype='object')"
+     ]
+    }
+   ],
    "source": [
     "# Clean the data by dropping duplicates and setting the index\n",
     "House_candidates_1.drop_duplicates(\"fec_candidate_id\", inplace=True)"
@@ -676,6 +917,32 @@
    "outputs": [],
    "source": [
     "House_candidates_1.set_index(\"fec_candidate_id\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean the data by dropping duplicates and setting the index\n",
+    "Senate_candidates.drop_duplicates(\"fec_candidate_id\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Senate_candidates.set_index(\"fec_candidate_id\", inplace=True)"
    ]
   },
   {
@@ -696,10 +963,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Senate_candidates.to_sql(name='senate_candidate', con=engine, if_exists='append', index=True)"
+   ]
   },
   {
    "cell_type": "markdown",
