added comments and finalized jupyter notebook for unemployment rate

--- a/state_csv_merging-v4.ipynb
+++ b/state_csv_merging-v4.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "HI_02                713210      17772               5.2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "NH_02                669601      13731               3.7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "NY_05                798555      29025               7.1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "SC_05                718465      22125               6.5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
        "WA_10                738843      22858               6.4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "WA_01                   744868      14192               3.6"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1114,13 +1114,13 @@
        "4      WA_01              744868      14192               3.6"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#reset index because of MySL error\n",
+    "#index reestablished because MySQL couldn't interpret the 'state_dist' column' as the primary key\n",
     "all_states_df_clean = all_states_df.reset_index()\n",
     "all_states_df_clean = all_states_df_clean.rename_axis(None)\n",
     "all_states_df_clean= all_states_df_clean.rename_axis(None, axis='columns')\n",
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
        "['congressional_district_unemployment']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "4   5      WA_01               744868       14192                3.6"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
