--- a/state_csv_merging-v5.ipynb
+++ b/state_csv_merging-v5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "0               713210     (+/- 9864 )  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "0               669601     (+/- 6052 )  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "[1 rows x 57 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "0               670725    (+/- 14486 )               720087     (+/- 2593 )  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "HI_02                713210   326042      17772               5.2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "NH_02                669601   355059      13731               3.7"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "NY_05                798555   381709      29025               7.1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
        "SC_05                718465   318265      22125               6.5"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
        "WA_10                738843   334287      22858               6.4"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "WA_01                   744868   380820      14192               3.6"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "4      WA_01              744868   380820      14192               3.6"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,16 +1182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['congressional_district_unemployment']"
+       "['candidate_finance',\n",
+       " 'congressional_district_cbp',\n",
+       " 'congressional_district_mcd',\n",
+       " 'house_candidate',\n",
+       " 'senate_candidate']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,17 +1207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#push data into MySQL database\n",
-    "all_states_df_clean.to_sql(name='congressional_district_unemployment', con=engine, if_exists='append', index=False)"
+    "all_states_df_clean.to_sql(name='congressional_district_mcd', con=engine, if_exists='append', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1304,14 +1308,14 @@
        "4   5      WA_01               744868    380820       14192                3.6"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#confirm read into MySQL\n",
-    "pd.read_sql_query('select * from congressional_district_unemployment', con=engine).head()"
+    "pd.read_sql_query('select * from congressional_district_mcd', con=engine).head()"
    ]
   },
   {
