--- a/Congressional Districts.ipynb
+++ b/Congressional Districts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4                     15,137  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "4                     15,137  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "4    AL         5    255,797             11,465,689               15,137"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "4    AL       05    255,797             11,465,689               15,137"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "4               15,137  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "4                 15137  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,38 +791,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = \"root:NewPassword@localhost:3306/election_2018_db\"\n",
+    "connection_string = \"root:$M$CK@butt.com@localhost:3306/election_2018_db\"\n",
     "engine = create_engine(f'mysql://{connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m_ron\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pymysql\\cursors.py:170: Warning: (3719, \"'utf8' is currently an alias for the character set UTF8MB3, which will be replaced by UTF8MB4 in a future release. Please consider using UTF8MB4 in order to be unambiguous.\")\n",
-      "  result = self._query(query)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "['candidate_finance',\n",
-       " 'congressional_district_employment',\n",
-       " 'congressional_district_unemployment',\n",
+       " 'congressional_district_cbp',\n",
+       " 'congressional_district_mcd',\n",
        " 'house_candidate',\n",
        " 'senate_candidate']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,11 +825,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "employment1_df.to_sql(name='congressional_district_employment', con=engine, if_exists='append', index=False)"
+    "employment1_df.to_sql(name='congressional_district_cbp', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>state_dist</th>\n",
+       "      <th>state</th>\n",
+       "      <th>district</th>\n",
+       "      <th>employment</th>\n",
+       "      <th>annual_payroll_in_1000</th>\n",
+       "      <th>num_of_establishment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AL_01</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>01</td>\n",
+       "      <td>236720</td>\n",
+       "      <td>9449314</td>\n",
+       "      <td>15611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>AL_02</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>02</td>\n",
+       "      <td>215224</td>\n",
+       "      <td>8266520</td>\n",
+       "      <td>14252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>AL_03</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>03</td>\n",
+       "      <td>179100</td>\n",
+       "      <td>6150074</td>\n",
+       "      <td>11510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>AL_04</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>04</td>\n",
+       "      <td>188796</td>\n",
+       "      <td>6497936</td>\n",
+       "      <td>12538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>AL_05</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>05</td>\n",
+       "      <td>255797</td>\n",
+       "      <td>11465689</td>\n",
+       "      <td>15137</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id state_dist state district  employment  annual_payroll_in_1000  \\\n",
+       "0   1      AL_01    AL       01      236720                 9449314   \n",
+       "1   2      AL_02    AL       02      215224                 8266520   \n",
+       "2   3      AL_03    AL       03      179100                 6150074   \n",
+       "3   4      AL_04    AL       04      188796                 6497936   \n",
+       "4   5      AL_05    AL       05      255797                11465689   \n",
+       "\n",
+       "   num_of_establishment  \n",
+       "0                 15611  \n",
+       "1                 14252  \n",
+       "2                 11510  \n",
+       "3                 12538  \n",
+       "4                 15137  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#confirm successful deposit into MySQL table\n",
+    "pd.read_sql_query('select * from congressional_district_cbp', con=engine).head()"
    ]
   },
   {
