--- a/Midterm Elections 2018.ipynb
+++ b/Midterm Elections 2018.ipynb
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "60  Dianne Feinstein    https://feinsteinforca.com/    NaN        /m/01gqws  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,16 +867,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\m_ron\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pymysql\\cursors.py:170: Warning: (3719, \"'utf8' is currently an alias for the character set UTF8MB3, which will be replaced by UTF8MB4 in a future release. Please consider using UTF8MB4 in order to be unambiguous.\")\n",
+      "  result = self._query(query)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['candidate_finance', 'house_candidate', 'senate_candidate']"
+       "['candidate_finance',\n",
+       " 'congressional_district_employment',\n",
+       " 'congressional_district_unemployment',\n",
+       " 'house_candidate',\n",
+       " 'senate_candidate']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,23 +900,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "Index(['fec_candidate_id'], dtype='object')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-953722384e0f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Clean the data by dropping duplicates and setting the index\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mHouse_candidates_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop_duplicates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"fec_candidate_id\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdrop_duplicates\u001b[0;34m(self, subset, keep, inplace)\u001b[0m\n\u001b[1;32m   4326\u001b[0m         \"\"\"\n\u001b[1;32m   4327\u001b[0m         \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_bool_kwarg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inplace'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4328\u001b[0;31m         \u001b[0mduplicated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mduplicated\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4329\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4330\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mduplicated\u001b[0;34m(self, subset, keep)\u001b[0m\n\u001b[1;32m   4376\u001b[0m         \u001b[0mdiff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4377\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdiff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4378\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4379\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4380\u001b[0m         vals = (col.values for name, col in self.iteritems()\n",
-      "\u001b[0;31mKeyError\u001b[0m: Index(['fec_candidate_id'], dtype='object')"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clean the data by dropping duplicates and setting the index\n",
     "House_candidates_1.drop_duplicates(\"fec_candidate_id\", inplace=True)"
@@ -912,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1119,7 @@
        "      <td>603299.58</td>\n",
        "      <td>954952.82</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>01/01/2017</td>\n",
+       "      <td>1/1/2017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1145,7 +1143,7 @@
        "      <td>3873.60</td>\n",
        "      <td>3873.60</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>01/01/2017</td>\n",
+       "      <td>1/1/2017</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1206,13 +1204,13 @@
        "0                    0.0                  NaN  \n",
        "1                    0.0                  NaN  \n",
        "2                    0.0                  NaN  \n",
-       "3                    0.0           01/01/2017  \n",
-       "4                    0.0           01/01/2017  \n",
+       "3                    0.0             1/1/2017  \n",
+       "4                    0.0             1/1/2017  \n",
        "\n",
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1365,7 @@
        "      <td>603299.58</td>\n",
        "      <td>954952.82</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>01/01/2017</td>\n",
+       "      <td>1/1/2017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1377,7 +1375,7 @@
        "      <td>3873.60</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>09/30/2018</td>\n",
+       "      <td>9/30/2018</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
@@ -1391,7 +1389,7 @@
        "      <td>3873.60</td>\n",
        "      <td>3873.60</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>01/01/2017</td>\n",
+       "      <td>1/1/2017</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1411,7 +1409,7 @@
        "1                     0.0               NaN                              0.00   \n",
        "2                     0.0               NaN                              0.00   \n",
        "3                     0.0        10/17/2018                         310388.35   \n",
-       "4                     0.0        09/30/2018                              0.00   \n",
+       "4                     0.0         9/30/2018                              0.00   \n",
        "\n",
        "   Individual_Unitemized_Contribution  Individual_Contribution  \\\n",
        "0                                0.00                      0.0   \n",
@@ -1445,13 +1443,13 @@
        "0                    0.0                  NaN  \n",
        "1                    0.0                  NaN  \n",
        "2                    0.0                  NaN  \n",
-       "3                    0.0           01/01/2017  \n",
-       "4                    0.0           01/01/2017  \n",
+       "3                    0.0             1/1/2017  \n",
+       "4                    0.0             1/1/2017  \n",
        "\n",
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1646,7 @@
        "      <td>603299.58</td>\n",
        "      <td>954952.82</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>01/01/2017</td>\n",
+       "      <td>1/1/2017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1658,7 +1656,7 @@
        "      <td>3873.60</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>09/30/2018</td>\n",
+       "      <td>9/30/2018</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
@@ -1672,7 +1670,7 @@
        "      <td>3873.60</td>\n",
        "      <td>3873.60</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>01/01/2017</td>\n",
+       "      <td>1/1/2017</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1692,7 +1690,7 @@
        "1              0.00                     0.0               NaN   \n",
        "2              0.00                     0.0               NaN   \n",
        "3         847733.69                     0.0        10/17/2018   \n",
-       "4              0.00                     0.0        09/30/2018   \n",
+       "4              0.00                     0.0         9/30/2018   \n",
        "\n",
        "   Individual_Itemized_Contribution  Individual_Unitemized_Contribution  \\\n",
        "0                              0.00                                0.00   \n",
@@ -1726,13 +1724,13 @@
        "0              0.00                    0.0                  NaN  \n",
        "1              0.00                    0.0                  NaN  \n",
        "2              0.00                    0.0                  NaN  \n",
-       "3         954952.82                    0.0           01/01/2017  \n",
-       "4           3873.60                    0.0           01/01/2017  \n",
+       "3         954952.82                    0.0             1/1/2017  \n",
+       "4           3873.60                    0.0             1/1/2017  \n",
        "\n",
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1745,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1969,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,16 +1991,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\m_ron\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pymysql\\cursors.py:170: Warning: (3719, \"'utf8' is currently an alias for the character set UTF8MB3, which will be replaced by UTF8MB4 in a future release. Please consider using UTF8MB4 in order to be unambiguous.\")\n",
+      "  result = self._query(query)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['candidate_finance', 'house_candidate', 'senate_candidate']"
+       "['candidate_finance',\n",
+       " 'congressional_district_employment',\n",
+       " 'congressional_district_unemployment',\n",
+       " 'house_candidate',\n",
+       " 'senate_candidate']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2014,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2024,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,64 +2056,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Don't Use"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "House_cand_financials = cand_financials_2[cand_financials_2[\"Cand_Office\"]=='H']\n",
-    "House_cand_financials.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(cand_financials_df.columns.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Duplicate Candidates table and filter by house \n",
-    "\n",
-    "candidates_cols = [\"fec_candidate_id\", \"name\", \"party\", \"status\", \"address_one\",\"address_two\", \"city\", \"state\", \"zip\",\n",
-    "                  \"fec_committee_id\", \"cycle\", ]\n",
-    "premise_transformed= premise_df[premise_cols].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
